tests/specs/ecosystem/bureaudouble/checkout/0_0_3.test
bureaudouble/checkout/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@bureaudouble/context-session@0.0.3": "jsr:@bureaudouble/context-session@0.0.3",
      "jsr:@bureaudouble/outils@0.0.42": "jsr:@bureaudouble/outils@0.0.42",
      "jsr:@bureaudouble/outils@0.0.44": "jsr:@bureaudouble/outils@0.0.44",
      "jsr:@cross/deepmerge@^1.0.0": "jsr:@cross/deepmerge@1.0.0",
      "jsr:@cross/jwt@0.2.0": "jsr:@cross/jwt@0.2.0",
      "jsr:@std/assert@^0.221.0": "jsr:@std/assert@0.221.0",
      "jsr:@std/encoding@^0.220.1": "jsr:@std/encoding@0.220.1",
      "jsr:@std/http@0.221": "jsr:@std/http@0.221.0"
    },
    "jsr": {
      "@bureaudouble/context-session@0.0.3": {
        "integrity": "d68dbeb4d47b0c332bf32cc8782b9fc0fc8a3c4808d4835cffe4aab8c0c30512",
        "dependencies": [
          "jsr:@bureaudouble/outils@0.0.44",
          "jsr:@cross/jwt@0.2.0",
          "jsr:@std/http@0.221"
        ]
      },
      "@bureaudouble/outils@0.0.42": {
        "integrity": "5cd0a2d2194530201c79e2ac1f5c05946dd9758e8accfc12dfd30bf474a266e9"
      },
      "@bureaudouble/outils@0.0.44": {
        "integrity": "cc27c6c255fa4c4846679573270258b7ffff5c74caa3b48872e1d27c151cf3a0"
      },
      "@cross/deepmerge@1.0.0": {
        "integrity": "1e1318a74e31ba1959b9aa0acae8bd417b806f74ffd25ac07c90e12f83ad6b1d"
      },
      "@cross/jwt@0.2.0": {
        "integrity": "069dbe6bfff08a91b02669726bda4f34287a14ecc07e073f6dcc89197259b591",
        "dependencies": [
          "jsr:@cross/deepmerge@^1.0.0",
          "jsr:@std/encoding@^0.220.1"
        ]
      },
      "@std/assert@0.221.0": {
        "integrity": "a5f1aa6e7909dbea271754fd4ab3f4e687aeff4873b4cef9a320af813adb489a"
      },
      "@std/encoding@0.220.1": {
        "integrity": "8dc38dd72e36cd68857a5837e24eb09a64bb296b96c295239c75eec17d45d23f"
      },
      "@std/http@0.221.0": {
        "integrity": "35fdcfed1501f2052338bf7ffba5d66f1455f2fffc01e9d7cf13eed548fffbaa",
        "dependencies": [
          "jsr:@std/assert@^0.221.0"
        ]
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Failed caching 'https://jsr.io/@cross/jwt/0.2.0/src/sign-verify/ecdsa.ts'.
    0: Access is denied. (os error 5) (for 'V:/.cache/deno/remote/https/jsr.io/7f3fe332e0971dcf1016c859787160b645c3dd74840c95102e5ca0ccfe50b853')
    at https://jsr.io/@cross/jwt/0.2.0/src/jwt.ts:4:48

